# MDE4806_S26-14

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  genindex.html  index.html  objects.inv  output_display.py  quad_out_script1.py  quadrature_decoder.cpp  quadrature_decoder.hpp  quadrature_output.cpp  quadrature_output.hpp  recieve.html  search.html  searchindex.js  setup.html  setup_and_assembly.html
.github/workflows/: sphinx.yml
Arduino_SPI/IAM20380_SPI/: IAM20380_SPI.ino
Components/Button/TS18-5-15-SL-160-SMT-TR/: SW_TS18-5-15-SL-160-SMT-TR.kicad_mod  TS18-5-15-SL-160-SMT-TR.kicad_sym  TS18-5-15-SL-160-SMT-TR.step
Integration/: .cproject  .mxproject  .project  Integration.ioc  Integration.launch  program.ioc
Integration/Core/Inc/: adc.h  kalman.h  main.h  quadrature_common.h  quadrature_decoder.h  quadrature_output.h  sensor.h  stm32g4xx_it.h
Integration/Core/Src/: adc.c  gpio.c  kalman.c  main.c  quadrature_decoder.c  quadrature_output.c  spi.c  stm32g4xx_it.c  tim.c
Integration/EWARM/: Project.eww  program.ewd
Kalman Filter Simulation/: animation_helpers.py  ekf_inclinometer.py  inclinometer_experiments.ipynb  inclinometer_sim.py  motion_profiles.py  robot_interface.py  wbs.ipynb
KalmanC/: .mxproject
KalmanC/Core/Src/: gpio.c
KalmanC/EWARM/: program.ewd  program.ewp
KalmanTest/: KalmanCalc.nb
QuadC/: CMakeLists.txt  quad_output.c  quad_output.h  quadrature_common.h  quadrature_decoder.c  quadrature_decoder.h  quadrature_output.c  quadrature_output.h  test_quadrature_decoder.cpp  test_quadrature_integration.cpp  test_quadrature_output.cpp  test_quadrature_pulses.cpp
Quadrature/: CMakeLists.txt  README.md  live_angle_test.py  output_display.py  quad_out_script1.py  quadrature_decoder.cpp  quadrature_decoder.hpp  quadrature_output.cpp  quadrature_output.hpp  robot_gui.cpp  test_quadrature_decoder.cpp  test_quadrature_output.cpp
Quadrature/esp32_bluetooth/: esp32_bluetooth.ino
Sensors/: .cproject  .mxproject  .project  ARDUINO_OUTPUT_TEST.ino  GYROSCOPE.c  STM32_tests Debug.launch  STM32_tests.ioc
Sensors/.metadata/: .log4j2.xml  version.ini
Sensors/Core/Inc/: kalman.h  main.h  quadrature_common.h  quadrature_decoder.h  quadrature_output.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Sensors/Core/Src/: kalman.c  main.c  quadrature_decoder.c  quadrature_output.c  stm32g4xx_hal_msp.c  (+1 more)
Sensors/Debug/: STM32_tests.elf  STM32_tests.list  STM32_tests.map  makefile  objects.list  sources.mk  st-link_gdbserver_log.txt
Sensors/EWARM/: Project.eww  STM32_tests.ewd  STM32_tests.ewp
TEST-Kalman/: CMakeLists.txt  KalmanCalc.nb  test_kalman_filter.cpp
TEST_Kalman/: KalmanCalc.nb  kalman.c  test_kalman_filter.cpp
_sources/: index.rst.txt  setup_and_assembly.rst.txt
_sources/data_collection/: data_collection.rst.txt
_sources/data_output/: data_output.rst.txt  quadrature_calculation.rst.txt
_sources/getting_started/: hardware_setup.rst.txt
_static/: custom.css
data_collection/: accelerometer.html  data_collection.html
data_output/: data_output.html  quadrature_calculation.html
data_processing/: data_processing.html  kalman_filter.html
doc/source/: setup_and_assembly.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst  setup_and_assembly.rst
getting_started/: contribution_guide.html  getting_started.html  hardware_setup.html  software_setup.html  what_is_it.html
inclinometer-firmware/: .cproject  .mxproject  .project  inclinometer-firmware.ioc  inclinometer-firmware.launch
inclinometer-firmware/Debug/: inclinometer-firmware.elf  inclinometer-firmware.list  inclinometer-firmware.map  makefile  objects.list
source/: index.rst
(+255 files in other folders)
